Chinh Dat nop bai tap

--- a/ss07_website_layout_design/exercise/exe1/create_layout_rwd.html
+++ b/ss07_website_layout_design/exercise/exe1/create_layout_rwd.html
@@ -15,6 +15,7 @@
             <li>Projects</li>
             <li>Contact</li>
         </ul>
+        <div class="login"><button>Login</button></div>
     </div>
     <div id="sidebar1">
         <ul>
